fixed admin routing root page, added deploy script, fixed scroll to top button not showing in prod

--- a/projects/common/src/components/scroll-to-float/scroll-to-float.component.scss
+++ b/projects/common/src/components/scroll-to-float/scroll-to-float.component.scss
@@ -1,4 +1,4 @@
-[ng-reflect-ngx-scroll-to] {
+common-scroll-to-float {
 	position: fixed !important;
 	bottom: 5em;
 	right: 5em;
